--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,7 @@ body {
     transition: opacity 0.4s ease;
 }
 
+/* plate */
 .plate {
     width: 100%;
     max-width: 1000px;
@@ -37,6 +38,7 @@ body {
     clip-path: inset(24% 20% 24% 20%);
 }
 
+/* incrementable wool strings */
 .wool-strings {
     position: absolute;
     top: -2%;
@@ -64,6 +66,7 @@ body {
     opacity: 1;
 }
 
+/* resource panel */
 .resource-panel {
     --hover-border: rgb(255, 255, 255);
     position: absolute;
@@ -81,108 +84,23 @@ body {
     will-change: transform, box-shadow;
 }
 
-.resource-panel::before {
+.resource-panel::before,
+.resource-panel::after {
     content: "";
     position: absolute;
-    background: rgba(255, 255, 255, 0.9);
     pointer-events: none;
+    background: rgba(255, 255, 255, 0.9);
+}
+
+.resource-panel::before {
     transition: transform 0.3s ease;
 }
 
-.resource-panel--wool {
-    padding: 0.3rem 1.6rem;
-    border-top-width: 20px;
-    bottom: -3rem;
-    right: 22rem;
-}
-
-.resource-panel--wool::before {
-    width: 2px;
-    height: 90px;
-    left: 50%;
-    bottom: 245%;
-    transform-origin: center bottom;
-    transform: translateX(-50%) scaleY(0);
-}
-
-.resource-panel--wool:hover::before {
-    transform: translateX(-50%) scaleY(-1);
-}
-
-.resource-panel--wool:hover {
-    transform: translateY(-4px);
-}
-
-.resource-panel--sensitive {
-    padding: 0.3rem 1.6rem;
-    border-left-width: 20px;
-    top: 18rem;
-    right: -15rem;
-}
-
-.resource-panel--sensitive::before {
-    width: 110px;
-    height: 2px;
-    left: -160px;
-    top: 50%;
-    transform-origin: left center;
-    transform: translateY(-50%) scaleX(0);
-}
-
-.resource-panel--sensitive:hover::before {
-    transform: translateY(-50%) scaleX(1);
-}
-
-.resource-panel--sensitive:hover {
-    transform: translateX(-4px);
-}
-
-.resource-panel--impulsive {
-    padding: 0.3rem 1.8rem 0.3rem 1.4rem;
-    border-right-width: 20px;
-    bottom: 11rem;
-    left: -15rem;
-}
-
-.resource-panel--impulsive::before {
-    width: 118px;
-    height: 2px;
-    right: -168px;
-    top: 50%;
-    transform-origin: right center;
-    transform: translateY(-50%) scaleX(0);
-}
-
-.resource-panel--impulsive:hover::before {
-    transform: translateY(-50%) scaleX(1);
-}
-
-.resource-panel--impulsive:hover {
-    transform: translateX(4px);
-}
-
-.resource-panel--extrovert {
-    padding: 0.3rem 1.8rem 0.3rem 1.4rem;
-    border-right-width: 20px;
-    top: 10rem;
-    left: -15rem;
-}
-
-.resource-panel--extrovert::before {
-    width: 118px;
-    height: 2px;
-    right: -168px;
-    top: 50%;
-    transform-origin: right center;
-    transform: translateY(-50%) scaleX(0);
-}
-
-.resource-panel--extrovert:hover::before {
-    transform: translateY(-50%) scaleX(1);
-}
-
-.resource-panel--extrovert:hover {
-    transform: translateX(4px);
+.resource-panel::after {
+    width: 8px;
+    height: 8px;
+    transform: scale(0);
+    transition: transform 0.2s ease 0.3s;
 }
 
 .resource-icon {
@@ -201,6 +119,138 @@ body {
     font-size: 3rem;
     font-weight: 500;
     min-width: 1ch;
+}
+
+/* wool */
+.resource-panel--wool {
+    padding: 0.3rem 1.6rem;
+    border-top-width: 20px;
+    bottom: -3rem;
+    right: 22rem;
+}
+
+.resource-panel--wool::before { /* hovering line animation */
+    width: 2px;
+    height: 90px;
+    left: 50%;
+    bottom: 245%;
+    transform-origin: center bottom;
+    transform: translateX(-50%) scaleY(0);
+}
+.resource-panel--wool:hover::before {
+    transform: translateX(-50%) scaleY(-1);
+}
+
+.resource-panel--wool::after { /* hovering square animation, "after" the line */
+    left: 50%;
+    bottom: calc(245% - 90px);
+    transform: translate(-50%, 50%) scale(0);
+}
+.resource-panel--wool:hover::after {
+    transform: translate(-50%, 50%) scale(1.3);
+}
+
+.resource-panel--wool:hover {
+    transform: translateY(-4px);
+}
+
+.resource-panel--sensitive {
+    padding: 0.3rem 1.6rem;
+    border-left-width: 20px;
+    top: 18rem;
+    right: -15rem;
+}
+
+/* sensitive */
+.resource-panel--sensitive::before {
+    width: 110px;
+    height: 2px;
+    left: -160px;
+    top: 50%;
+    transform-origin: left center;
+    transform: translateY(-50%) scaleX(0);
+}
+.resource-panel--sensitive:hover::before {
+    transform: translateY(-50%) scaleX(1);
+}
+
+.resource-panel--sensitive::after {
+    left: -50px;
+    top: 50%;
+    transform: translate(-100%, -50%) scale(0);
+}
+.resource-panel--sensitive:hover::after {
+    transform: translate(-100%, -50%) scale(1.3);
+}
+
+.resource-panel--sensitive:hover {
+    transform: translateX(-4px);
+}
+
+/* impulsive */
+.resource-panel--impulsive {
+    padding: 0.3rem 1.8rem 0.3rem 1.4rem;
+    border-right-width: 20px;
+    bottom: 11rem;
+    left: -15rem;
+}
+
+.resource-panel--impulsive::before {
+    width: 118px;
+    height: 2px;
+    right: -168px;
+    top: 50%;
+    transform-origin: right center;
+    transform: translateY(-50%) scaleX(0);
+}
+.resource-panel--impulsive:hover::before {
+    transform: translateY(-50%) scaleX(1);
+}
+
+.resource-panel--impulsive::after {
+    right: -50px;
+    top: 50%;
+    transform: translate(100%, -50%) scale(0);
+}
+.resource-panel--impulsive:hover::after {
+    transform: translate(100%, -50%) scale(1.3);
+}
+
+.resource-panel--impulsive:hover {
+    transform: translateX(4px);
+}
+
+/* extrovert */
+.resource-panel--extrovert {
+    padding: 0.3rem 1.8rem 0.3rem 1.4rem;
+    border-right-width: 20px;
+    top: 10rem;
+    left: -15rem;
+}
+
+.resource-panel--extrovert::before {
+    width: 118px;
+    height: 2px;
+    right: -168px;
+    top: 50%;
+    transform-origin: right center;
+    transform: translateY(-50%) scaleX(0);
+}
+.resource-panel--extrovert:hover::before {
+    transform: translateY(-50%) scaleX(1);
+}
+
+.resource-panel--extrovert::after {
+    right: -50px;
+    top: 50%;
+    transform: translate(100%, -50%) scale(0);
+}
+.resource-panel--extrovert:hover::after {
+    transform: translate(100%, -50%) scale(1.3);
+}
+
+.resource-panel--extrovert:hover {
+    transform: translateX(4px);
 }
 
 .counter-btn {
@@ -286,10 +336,12 @@ html {
     overflow: scroll;
     overflow-x: hidden;
 }
+
 ::-webkit-scrollbar {
     width: 0;
     background: transparent;
 }
+
 ::-webkit-scrollbar-thumb {
     background: #FF0000;
 }
