--- a/styles.css
+++ b/styles.css
@@ -314,11 +314,23 @@ body {
     transition: opacity 0.6s ease;
 }
 
+.result-type {
+    padding-right: 250px;
+    font-size: 3rem;
+}
+
 .result-image {
     max-width: min(80vw, 900px);
     width: 100%;
     height: auto;
     filter: drop-shadow(0 24px 48px rgba(0, 0, 0, 0.65));
+}
+
+.result-description {
+    text-align: left;
+    padding-top: 20px;
+    width: 80%;
+    font-size: 1.2rem;
 }
 
 body.crafting .canvas,
